[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "header_guardian"
version = "0.0.1"
authors = [
  { name="dhoove", email="pypi.patient804@passmail.net" },
]
description = "A C/C++ header guard creator and updater"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
    "Programming Language :: C",
    "Programming Language :: C++",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/dhoove/header_guardian"
Issues = "https://github.com/dhoove/header_guardian/issues"

[project.scripts]
header_guardian = "header_guardian.header_guardian:main"
